<resources>
    <string name="app_name">Shop Application</string>
    <string name="explorer_title">Explorer</string>
    <string name="cart_title">Cart</string>
    <string name="favorites_title">Favorites</string>
    <string name="profile_title">Profile</string>
    <string name="filter_title">Filter</string>
    <string name="home_title_category">Select Category</string>
    <string name="view_categories">view all</string>
    <string name="category_name">Smartphones</string>
    <string name="home_title_hot">Hot Sales</string>
    <string name="view_all">see more</string>
    <string name="item_name">Iphone 12</string>
    <string name="item_description">Super. Mega. Rapido.</string>
    <string name="hot_button_text">Buy now!</string>
    <string name="home_title_sellers">Best Seller</string>
    <string name="seller_discount"><s>$%d</s></string>
    <string name="seller_price"><strike>$%d</strike></string>
    <string name="seller_name">Samsung Galaxy S20 Ultra 5G</string>
    <string name="search">Search</string>
    <string name="filter_options">Filter options</string>
    <string name="button_done_text">Done</string>
    <string name="brand_samsung">Samsung</string>
    <string name="brand_iphone">Iphone</string>
    <string name="brand_xiaomi">Xiaomi</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="city">City</string>
    <string name="product_detail">Product Details</string>
    <string name="cart_checkout">Checkout</string>
    <string name="cart_delivery">Delivery</string>
    <string name="cart_delivery_price">Free</string>
    <string name="cart_total">Total</string>
    <string name="cart_total_price">$%d</string>
    <string name="add_address">Add address</string>
    <string name="cart_subtitle">My Cart</string>
    <string name="smartphone_name">Galaxy S21 Ultra 5G</string>
    <string name="smartphone_price">$%d</string>
    <string name="count">5</string>
    <string name="tab_shop">Shop</string>
    <string name="tab_details">Details</string>
    <string name="tab_features">Features</string>
    <string name="cpu_name">Exynos 990</string>
    <string name="camera">108 + 12 MP</string>
    <string name="memory">8 GB</string>
    <string name="card">256 GB</string>
    <string name="select_options">Select color and capacity</string>
    <string name="smartphone_size_primary">128 GB</string>
    <string name="smartphone_size_secondary">256 GB</string>
    <string name="add_to_cart">Add to Cart $1500.00</string>
    <string name="details_title">Details</string>
    <string name="location">Pick location!</string>
    <string name="checkout">Yay!</string>
    <string name="explorer_size_text">4.5 to 5.5. inches</string>
    <string name="explorer_filter_default_value">All</string>
</resources>