<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/seller_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:padding="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/seller_picture_item"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/picture_samsung"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seller_button_favorite"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/buttons_background"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:theme="@style/ShopApplication"
                app:icon="@drawable/icon_favorite"
                app:iconSize="24dp"
                app:iconTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShopApplication.CategoryButton" />

            <LinearLayout
                android:id="@+id/seller_price_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seller_picture_item"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/seller_item_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/seller_discount"
                    android:textColor="@color/secondaryColor"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/seller_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/seller_price"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/seller_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/seller_name"
                android:textColor="@color/secondaryColor"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seller_price_layout"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>